# Privacy_Preserving_ML

./: .gitignore  Block-wise Permutation.ipynb  README.md  Untitled3.ipynb  conference_101719.tex  pyproject.toml  reconstruction_attack.ipynb  remaining_roadmap.md  report.aux  report.fdb_latexmk  report.fls  report.tex  run_in_colab.ipynb  runs.csv  runs.jsonl  smpc_colab.ipynb
docs/superpowers/plans/: 2026-04-18-kaggle-native-split-refactor.md
docs/superpowers/specs/: 2026-04-18-mia-design.md
privacy_ml/: __init__.py  cache.py  data.py  metrics.py  models.py  run.py  runner.py  schema.py  smpc.py
privacy_ml/attacks/: __init__.py  reconstruction.py  shokri.py  yeom.py
privacy_ml/ppt/: __init__.py  base.py  bie.py  dp.py  smpc.py  stubs.py
scripts/: generate_colab_notebook.py  make_bie_demo.py  plot_results.py
tests/: test_attacks.py  test_bie.py  test_cache.py  test_data.py  test_dp.py  test_metrics.py  test_models.py  test_ppt.py  test_reconstruction.py  test_runner.py  test_smpc.py
