[project]
name = "privacy-preserving-ml"
version = "0.1.0"
description = "MIA evaluation of privacy-preserving mechanisms for chest X-ray pneumonia classification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Egehan Yıldız"},
    {name = "Kemal Onur Özkan"},
    {name = "İrem Damla Karagöz"},
    {name = "Eray İşçi"},
    {name = "İlmay Taş"},
]
dependencies = [
    "tensorflow>=2.15; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "tensorflow-macos>=2.15; platform_machine == 'arm64' and platform_system == 'Darwin'",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "kaggle>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["privacy_ml*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
